--- a/wishlist.html
+++ b/wishlist.html
@@ -22,7 +22,7 @@
 		<div class="wish-list-container">
 			<h1> List of Wishes </h1>
 			<div class="wish-lists">
-				<ul class="wish-list">
+				<ul class="wish-list" id="giftlist">
 				</ul>
 			</div>
 		</div>
@@ -55,6 +55,6 @@
 		</ul>
 	</footer>
 
-<script src="js/main.js"></script>
+<script src="js/wishlist.js"></script>
 </body>
 </html>
